--- a/02-android/Astudio/app/src/main/res/layout/activity_ciclo_vida.xml
+++ b/02-android/Astudio/app/src/main/res/layout/activity_ciclo_vida.xml
@@ -10,10 +10,11 @@
         android:id="@+id/btn_anadir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="260dp"
+        android:layout_marginBottom="60dp"
         android:text="Anadir"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
