--- a/deberes/deber1/src/MenuMarcas.form
+++ b/deberes/deber1/src/MenuMarcas.form
@@ -55,7 +55,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Pais de Origen"/>
+          <text value="País de Origen"/>
         </properties>
       </component>
       <component id="325b9" class="javax.swing.JLabel">
@@ -63,7 +63,7 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Anio de Ceacion"/>
+          <text value="Año de Creación"/>
         </properties>
       </component>
       <component id="e51c0" class="javax.swing.JTextField" binding="txt_anio_marca">
@@ -127,7 +127,7 @@
           <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Menu Modelos"/>
+          <text value="Menù Modelos"/>
         </properties>
       </component>
       <component id="54f30" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
