--- a/deberes/deber1/src/MenuModelos.form
+++ b/deberes/deber1/src/MenuModelos.form
@@ -29,7 +29,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Anio de lanzamiento"/>
+          <text value="Año de Lanzamiento"/>
         </properties>
       </component>
       <component id="342e4" class="javax.swing.JLabel">
@@ -125,7 +125,7 @@
           <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Menu Marcas"/>
+          <text value="Menù Marcas"/>
         </properties>
       </component>
     </children>
