--- a/02-android/Astudio/app/src/main/res/layout/activity_main.xml
+++ b/02-android/Astudio/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,15 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_List_view"
         app:layout_constraintVertical_bias="0.167" />
 
+    <Button
+        android:id="@+id/btn_intent_implicito"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="236dp"
+        android:text="Intent Implicito"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
