--- a/02-android/Astudio/app/src/main/res/layout/activity_intent_envia_parametros.xml
+++ b/02-android/Astudio/app/src/main/res/layout/activity_intent_envia_parametros.xml
@@ -13,6 +13,29 @@
         android:text="Devolver Respuesta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.295" />
+
+    <Button
+        android:id="@+id/btn_resp_aceptar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:text="Aceptar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_devolver_respuesta"
+        app:layout_constraintStart_toStartOf="@+id/btn_devolver_respuesta"
+        app:layout_constraintTop_toBottomOf="@+id/btn_devolver_respuesta" />
+
+    <Button
+        android:id="@+id/btn_resp_cancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="84dp"
+        android:text="Cancelar"
+        app:layout_constraintEnd_toEndOf="@+id/btn_resp_aceptar"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="@+id/btn_resp_aceptar"
+        app:layout_constraintTop_toBottomOf="@+id/btn_resp_aceptar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
