--- a/examen/app/src/main/res/layout/activity_main.xml
+++ b/examen/app/src/main/res/layout/activity_main.xml
@@ -8,34 +8,37 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="186dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="120dp"
-        android:text="Menu Principal"
+        android:layout_width="210dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="45dp"
+        android:text="Menú Principal"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_marcas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="Menu Marcas"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="60dp"
+        android:text="Menú Marcas"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.451"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btn_modelos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
-        android:text="Menu Modelos"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="30dp"
+        android:text="Menú Modelos"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/btn_marcas"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_marcas"
         app:layout_constraintTop_toBottomOf="@+id/btn_marcas" />
 
