--- a/examen/app/src/main/res/layout/activity_main.xml
+++ b/examen/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <Button
         android:id="@+id/btn_marcas"
         android:layout_width="250dp"
-        android:layout_height="150dp"
+        android:layout_height="120dp"
         android:layout_marginTop="60dp"
         android:text="Menú Marcas"
         android:textSize="24sp"
@@ -33,13 +33,23 @@
     <Button
         android:id="@+id/btn_modelos"
         android:layout_width="250dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
         android:text="Menú Modelos"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/btn_marcas"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/btn_marcas"
         app:layout_constraintTop_toBottomOf="@+id/btn_marcas" />
+
+    <Button
+        android:id="@+id/btn_maps"
+        android:layout_width="250dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
+        android:text="Mapa"
+        app:layout_constraintEnd_toEndOf="@+id/btn_modelos"
+        app:layout_constraintStart_toStartOf="@+id/btn_modelos"
+        app:layout_constraintTop_toBottomOf="@+id/btn_modelos" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
