--- a/examen/app/src/main/res/layout/activity_main.xml
+++ b/examen/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,13 @@
         app:layout_constraintStart_toStartOf="@+id/btn_modelos"
         app:layout_constraintTop_toBottomOf="@+id/btn_modelos" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/btn_maps"
+        app:layout_constraintStart_toStartOf="@+id/btn_maps"
+        app:layout_constraintTop_toBottomOf="@+id/btn_maps"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
